# text_search

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  fileinfo.h  filesview.cpp  filesview.h  foundfilesmodel.cpp  foundfilesmodel.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  minizip_wrapper.cpp  minizip_wrapper.h  progressbar.ui  progressstatus.cpp  progressstatus.h  progressstatus.ui  progresswithcancel.cpp  progresswithcancel.h
test_data/: generate_text_data.py
